tests/unit/language/errors/return_local_slice_rejected.arche
// A function may not return a slice/array that traces to its OWN local buffer: that storage lives in
// this frame and is reclaimed when it returns, so the handed-back fat pointer would dangle. A returned
// slice must trace to a buffer passed IN (an `own`/borrowed param). Caught at compile time, never UB.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "cannot return a local array" %t.out
#import { fmt }
mk :: func() -> int[] {
  b: int[4];
  return b;
}

main :: proc() {
  r := mk();
  fmt.printf("%d\n", r[0]);
}
